<resources>
    <string name="app_name" translatable="false">iAlert</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoieWFyb245MTkiLCJhIjoiY2pwNDZyYmdxMDFnMjNsbWt3amJoMTdjdiJ9.-FD6s9dT92zpHFFv8dNFkA</string>
    <string name="access_token_notification" translatable="false">pk.eyJ1IjoieWFyb245MTkiLCJhIjoiY2pwaDg1ZWZwMHJhODNwbGc3NDZxN202NSJ9.cEXdBXMS74lHO3pOHvmyrQ</string>
    <string name="title_activity_navigation_after_notification">NavigationAfterNotification</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="navigate_to_safe_place">Navigate to a safe location</string>
    <string name="war_mode">War mode</string>
    <string name="language_change">Change language</string>
    <string name="instructions_headline">Instructions</string>
    <string name="ok">OK</string>
    <string name="instructions">Lay on the ground and protect your head with your hands</string>
    <string name="was_navigation_stopped" translatable="false">was_navigation_stopped</string>
    <string name="was_in_tunnel" translatable="false">was_in_tunnel</string>
    <string name="seconds_remain">Time left:</string>
    <string name="menu_location">Safe Places</string>
    <string name="menu_war_mode">War Mode</string>
    <string name="menu_areas">Areas</string>
    <string name="menu_sound">Sounds</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="sound_off">Sounds Off</string>
    <string name="sound_on">Sounds On</string>
    <string name="alarm_on">You have been added to alarms in the selected city </string>
    <string name="alarm_off">You have been removed from the alarms in the selected city </string>
    <string name="search_city">Search for a city </string>
    <string name="maximum_subs">It is not possible to sign to more than 10 cities</string>
    <string name="pick_language">Pick language</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="no_shelter">There is no shelter around you</string>


</resources>
